--- a/Source/TrainEngine/TrainEngine.csproj
+++ b/Source/TrainEngine/TrainEngine.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="trains.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="trains.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
