Tests for ReadTrains

--- a/Source/TrainEngine.Tests/TrainEngine.Tests.csproj
+++ b/Source/TrainEngine.Tests/TrainEngine.Tests.csproj
@@ -7,6 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\trains_empty.txt" />
+    <None Remove="trains_typical.txt" />
+    <None Remove="trains_Wrong_Format.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\trains_empty.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\trains_wrong_format.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\trains_typical.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
