--- a/Source/TrainConsole/TrainConsole.csproj
+++ b/Source/TrainConsole/TrainConsole.csproj
@@ -25,6 +25,9 @@
     <None Update="Data\trains.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\traintrack2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
