--- a/Source/TrainEngine.Tests/TrainEngine.Tests.csproj
+++ b/Source/TrainEngine.Tests/TrainEngine.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\mock_track.txt" />
     <None Remove="Data\stations_typical.txt" />
     <None Remove="Data\stations_wrong_format.txt" />
     <None Remove="Data\trains_empty.txt" />
@@ -15,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Data\mock_track.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\stations_typical.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
